# bonfyre-oss

./: .gitignore  Command Center.base  Dashboard.md  Idea Tracker.base  Makefile  README.md  Transcription Jobs.base  artifact.json  explore.html  index.html  intake-manifest.json
10-Code/LocalAITranscriptionService/: README.md  com.bonfyre.local-ai-transcription-queue.plist  drain_queue.sh  pyproject.toml
10-Code/LocalAITranscriptionService/outputs-smoke/smoke-test/: deliverable.md  meta.json
10-Code/LocalAITranscriptionService/outputs-smoke/smoke-test-config/: deliverable.md  meta.json
10-Code/LocalAITranscriptionService/samples/: README.md
10-Code/LocalAITranscriptionService/samples/intake-packages/: customer-01-gaurav-conversations.intake-package.json
10-Code/LocalAITranscriptionService/samples/proof-deliverables/: index.json
10-Code/LocalAITranscriptionService/samples/proof-deliverables/customer-sample-gaurav-deep/: deliverable.md  meta.json  proof-review.json  proof-summary.json  raw_transcript.txt  transcript.txt
10-Code/LocalAITranscriptionService/samples/proof-deliverables/founder-sample-pickfu/: deliverable.md  meta.json  proof-review.json  proof-summary.json  raw_transcript.txt  transcript.txt
10-Code/LocalAITranscriptionService/src/local_ai_transcription_service/: __init__.py  benchmark.py  bootstrap.py  cleanup.py  cli.py  intake.py  models.py  paragraphs.py  pipeline.py  piper.py  proof.py  quality.py  queue.py  review.py  runtime_guard.py  summary.py  templates.py  transcription.py
10-Code/LocalAITranscriptionService/tests/: test_pipeline.py
(+817 files in other folders)
